tests/ui/modules/super-at-crate-root.stderr
error[E0433]: too many leading `super` keywords within `crate`
  --> $DIR/super-at-crate-root.rs:4:5
   |
LL | use super::f;
   |     ^^^^^ this `super` would go above the crate root

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
